src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws1-out2-fsT-wfsA2-spA1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-1\nopen on output: headless-2\nopen fullscreen: true\nwant fullscreen: A2\nset parent: A1"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
